--- a/gb/21/5/20/n12962702.md
+++ b/gb/21/5/20/n12962702.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vrkpfu3095/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vrkpfu3095/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vrkpfu3095/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vrkpfu3095/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vrkpfu3095/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>打败8个常见的坏习惯 家务打扫事半功倍</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965096-shutterstock_1787027261-600x400.jpg" />
 <h6>清除灰尘要用有静电吸附功能的防尘撢撢去灰尘，然后再用抹布擦拭。(Shutterstock）
@@ -9,17 +9,17 @@
 	<p>【大纪元2021年05月25日讯】（大纪元记者莫林综合报导）凡生活必会留下痕迹，尤其疫情期间待在家里的时间变多了，看到环境出现脏污或凌乱时，总是有惰性，或者有眼不见为净的心态而不想去面对，能拖就拖。</p>
 <p>终于拖到有一天，自己都受不了了才开始打扫，觉得这里也不干净，那里也不整齐，花很多时间打扫而感到精疲力尽。然后经过了一段时间又开始凌乱，如此周而复始，令人十分挫折。</p>
 <p><strong>出现上述的情况有几个原因：</strong></p>
-<p>一个是生活习惯造成的，现代化带来忙碌的生活模式，上班上学占据了大部分的时间，很难像过去的家庭主妇会花心思在<ahref="https://github.com/vrkpfu3095/djy/blob/master/gb/tag/%E5%AE%B6%E5%8A%A1%E6%89%93%E6%89%AB.md#1">家务打扫</a>上。</p>
+<p>一个是生活习惯造成的，现代化带来忙碌的生活模式，上班上学占据了大部分的时间，很难像过去的家庭主妇会花心思在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AE%B6%E5%8A%A1%E6%89%93%E6%89%AB.md#1">家务打扫</a>上。</p>
 <p>网购的便利丰富了物质生活也连带让家里增加了很多物品，这些都能造成凌乱和维持整洁的难度。</p>
-<p>另一个原因是<ahref="https://github.com/vrkpfu3095/djy/blob/master/gb/tag/%E6%B8%85%E6%B4%81.md#1">清洁</a>打扫的方式，清洁用品琳琅满目，针对不同的脏污有不同的清洁用品，用法不当还可能产生反效果。</p>
-<p>既然如此，有什么方式可以让<ahref="https://github.com/vrkpfu3095/djy/blob/master/gb/tag/%E5%AE%B6%E5%8A%A1%E6%89%93%E6%89%AB.md#1">家务打扫</a>轻松些，不致于让人精疲力竭呢？</p>
+<p>另一个原因是<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B8%85%E6%B4%81.md#1">清洁</a>打扫的方式，清洁用品琳琅满目，针对不同的脏污有不同的清洁用品，用法不当还可能产生反效果。</p>
+<p>既然如此，有什么方式可以让<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AE%B6%E5%8A%A1%E6%89%93%E6%89%AB.md#1">家务打扫</a>轻松些，不致于让人精疲力竭呢？</p>
 <p>首先，从改变生活习惯做起吧！生活习惯听起来很像是老掉牙的事，但一些不良的生活习惯正在不断地侵蚀着我们的生活品质。如果能养成良好的生活习惯，你发现家务打扫会轻松很多。</p>
-<p><strong>以下7种不良的生活习惯，检视一下自己是否误入迷区：</strong></p>
+<p><strong>以下8种不良的生活习惯，检视一下自己是否误入迷区：</strong></p>
 <figure id="attachment_12965067" aria-describedby="caption-attachment-12965067" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12965067-shutterstock_1373216984.jpg"><img class="size-large wp-image-12965067" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965067-shutterstock_1373216984-600x451.jpg" alt="床" width="600" b="451" /></a><figcaption id="caption-attachment-12965067" class="wp-caption-text">起床后没有整理床铺。（Shutterstock）</figcaption></figure>
 <h2><span style="color: #008000;">1. 起床后没有整理床铺</span></h2>
 <p>闹钟一响，你可能立刻跳下床，刷牙洗脸，抓个早餐就冲出门上班或上学。床铺就这么停格在你起床的那一个动作。即使因为疫情不用外出，待在家的时间变多了，你可能还习以为常呢！</p>
 <p>床铺没有整理让整个房间显的凌乱。就像衣服要穿戴整齐一样，几个扣子没有扣好就是不对劲。这是一个人的生活规矩，一种生活的纪律。习惯每天整理床铺的人，做事通常能按部就班、不急躁。</p>
-<p>“好的开始是成功的一半”，不妨从一早起床开始建立整理床铺的心态，小小的成就感，能带给你一整天积极的心态，更能做好其他的家务<ahref="https://github.com/vrkpfu3095/djy/blob/master/gb/tag/%E6%B8%85%E6%B4%81.md#1">清洁</a>。</p>
+<p>“好的开始是成功的一半”，不妨从一早起床开始建立整理床铺的心态，小小的成就感，能带给你一整天积极的心态，更能做好其他的家务<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B8%85%E6%B4%81.md#1">清洁</a>。</p>
 <p>整理床铺就是将睡扁的枕头恢复原来的形状，将床铺铺好，被单折好，其实不会花很多时间，可以根据个人的条件，准备好整理的寝具，3分钟就能完成。</p>
 <figure id="attachment_12965068" aria-describedby="caption-attachment-12965068" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12965068-shutterstock_1840770829.jpg"><img class="size-large wp-image-12965068" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965068-shutterstock_1840770829-600x400.jpg" alt="信件" width="600" b="400" /></a><figcaption id="caption-attachment-12965068" class="wp-caption-text">每周过滤一遍所有的信件，处理起来轻松，也能即时处理不拖延事情，更有效率。（Shutterstock）</figcaption></figure>
 <h2><span style="color: #008000;">2. 信件杂志堆积如山</span></h2>
@@ -51,50 +51,44 @@
 <p>生活中有太多事让人分心，正在拖地时，一个电话或者一个社群媒体的讯息跳出来，你可能就分心去忙别的事了。如果累积了许多做一半的事情，会让你觉得待办事情愈来愈多，家务的打扫似乎永远做不完，打扫起来更加困难。</p>
 <p>不管是家务打扫还是做事情，尽可能不要分心，专心的完成后再去做下一件事。有序地一件一件的完成，你会更有成就感，做事效率也会提高。</p>
 <p>如果改掉以上8个不良习惯，然后每天拨15分钟将凌乱的东西归位，家里就能保持基本的整洁。因为少了堆积家事的压力，打扫起来轻松许多，也更容易持之以恒，其余的就等周末再来做深度打扫。这样的家务打扫就能达到事半功倍的效果。</p>
-<h3><span style="color: #008000;">??<a style="color: #008000;" href=><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/20/12/31/n12656730.md#1">怎样打扫才干净？家事职人分享清洁秘诀</a></span><br />
-<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/5/4/n12923129.md#1">家家必备 只这2样就能清洁家中电器用品</a></span><br />
-<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/5/4/n12923134.md#1">白色衣物洗不干净？自制天然配方洗衣粉搞定</a></span></h3>
-<p>责任编辑：曾晏均</p>
+<h3><span style="color: #008000;">??<a style="color: #008000;" href=><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/31/n12656730.md#1">怎样打扫才干净？家事职人分享清洁秘诀</a></span><br />
+<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/4/n12923129.md#1">家家必备 只这2样就能清洁家中电器用品</a></span><br />
+<span style="color: #008000;"> ??<a style="color: #008000;" href=><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/4/n12923134.md#1">白色衣物洗不干净？自制天然配方洗衣粉搞定</a></span></h3>
+<p>责任编辑：曾晏均◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/4/7/n12864215.md#1">清洁微波炉有妙法 简单几步内外都干净</a></li>
-<li><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/4/16/n12885476.md#1">小提琴手变清洁工 德国民众集会抗议封锁</a></li>
-<li><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/4/20/n12892600.md#1">这样洗才叫干净？网美圈刮起“减法清洁”旋风|纯萃自然</a></li>
-<li><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/21/4/21/n12895630.md#1">巧用苏打 10种妙招让家居清洁倍轻松</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/7/n12864215.md#1">清洁微波炉有妙法 简单几步内外都干净</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/16/n12885476.md#1">小提琴手变清洁工 德国民众集会抗议封锁</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/20/n12892600.md#1">这样洗才叫干净？网美圈刮起“减法清洁”旋风|纯萃自然</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/21/n12895630.md#1">巧用苏打 10种妙招让家居清洁倍轻松</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023278.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/19/n12961042.md#1">恶人有恶报 上天明示以警世人</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/18/n12957550.md#1">女子产子后“死亡” 看见过去与未来</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/23/n12970006.md#1">【首播】专访程晓农：拜登对华政策5特点（9）</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/24/n12972206.md#1">【微视频】官媒称袁隆平“养活全世界”引争议</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12968714.md#1">【新闻看点】滇青强震400余震 台湾疫情严峻</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12967707.md#1">大连一轿车高速直冲斑马线 多人被撞飞死亡</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12967251.md#1">大陆再有六百亿芯片项目烂尾 竟由同一人操盘</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12967173.md#1">【拍案惊奇】北京谋台8方式？冯小刚预言再文革</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12967774.md#1">GFRIEND合约告终：一起唱过的歌会永远闪耀</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/21/n12966897.md#1">李云迪晒与孙俪一家合照 等等与小花正面曝光</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/21/n12966735.md#1">郝蕾揭大陆娱乐圈乱象：挤破头是为了名和利</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/23/n12970222.md#1">打错字悼念袁隆平 大陆多位明星被吐槽</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/21/n12966486.md#1">张国立又摊上糟心事 导戏封路惹冲突</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/21/n12965637.md#1">连日确诊破百 台湾能在2周内让疫情平复吗？</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/21/n12964469.md#1">新冠症状和感冒、流感、过敏有何区别？一次看懂</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12968191.md#1">达尔文拱门坍塌 龟岛物种被质疑非进化而来</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/3/n12922080.md#1">5天内治新冠？新冠口服药有3大优点 补疫苗不足</a></li>
-<li><a href="https://github.com/odwrwk3904/djy/blob/master/gb/21/5/22/n12967922.md#1">【重播】印度确诊急速减半  原因为何？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vrkpfu3095/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vrkpfu3095/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/20/n12962702.htm">打败8个常见的坏习惯 家务打扫事半功倍</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/20/n12962702.htm">打败8个常见的坏习惯 家务打扫事半功倍</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vrkpfu3095/djy/blob/master/gb/21/5/20/n12962702.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vrkpfu3095/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vrkpfu3095/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vrkpfu3095/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrkpfu3095/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/20/n12962702.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
